# project-compilers-2021

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: compile.c  compile.h  hash.c  hash.h  interpreter.c  interpreter.h  lex.l  main.c  main.y  tree.c  tree.h
src/parser/: lexer.l  parser.y
test/: prog.txt
